# nova-pixel

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: build.yml  verify.yml
idl/: nova_pixel.json  nova_pixel.ts
migrations/: deploy.ts
patches/anchor-lang-idl/src/: build.rs
patches/anchor-syn/src/idl/: defined.rs
programs/nova-pixel/: Cargo.toml
programs/nova-pixel/src/: constants.rs  errors.rs  events.rs  jupiter.rs  lib.rs
programs/nova-pixel/src/instructions/: admin.rs  buy_item.rs  buy_package.rs  capture_pixel.rs  claim_airdrop.rs  color_pixel.rs  connect_player.rs  emergency.rs  finalize_airdrop.rs  initialize.rs  mod.rs  revoke_authorities.rs  sell_ingame.rs  tournament.rs
programs/nova-pixel/src/state/: global_state.rs  mod.rs  player_account.rs  wallet_state.rs
scripts/: revoke.ts
tests/: nova-pixel.ts
