[workspace]
members = ["programs/nova-pixel"]
resolver = "2"

[patch.crates-io]
# Patched to remove --cfg procmacro2_semver_exempt which breaks IDL generation on stable Rust
# See: https://github.com/coral-xyz/anchor/issues/XXXX
anchor-lang-idl = { path = "patches/anchor-lang-idl" }


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

