[workspace]
members = ["programs/nova-pixel"]
resolver = "2"

[patch.crates-io]
# Patched to remove --cfg procmacro2_semver_exempt which breaks IDL generation on stable Rust
anchor-lang-idl = { path = "patches/anchor-lang-idl" }
# Patched to disable source_file() call (nightly-only proc_macro API) inside idl/defined.rs
anchor-syn = { path = "patches/anchor-syn" }


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

