[package]
name = "nova-pixel"
version = "0.1.0"
description = "Nova Pixel — Blockchain Pixel War Game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nova_pixel"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
solana-program = "~1.18"
